--- a/src/components/page/appsco-manage-page-styles.html
+++ b/src/components/page/appsco-manage-page-styles.html
@@ -20,6 +20,8 @@
                 height: calc(100% - 20px);
             }
             :host div[resource] > .resource-header {
+                height: auto;
+                line-height: normal;
                 padding: 20px 10px 30px;
                 position: relative;
             }
