--- a/src/components/page/appsco-page-styles.html
+++ b/src/components/page/appsco-page-styles.html
@@ -16,6 +16,9 @@
                 --info-width: 318px;
                 --collapsible-content-background-color: #fbfbfb;
             }
+            :host * {
+                color: var(--primary-text-color);
+            }
             :host hr {
                 height: 1px;
                 margin: 4px 0;
@@ -35,13 +38,17 @@
                 height: 100%;
                 overflow: auto;
             }
-            :host div[resource] > *:not(.resource-actions), :host div[info] > *:not(.info-actions) {
-                padding: 10px;
-                box-sizing: border-box;
-            }
-            :host .resource-header {
+            :host .resource-header, :host .info-header, :host .content-top-header {
+                height: 50px;
+                line-height: 30px;
+                color: var(--primary-text-color);
                 font-size: 16px;
                 border-bottom: 1px solid var(--divider-color);
+                @apply(--layout-flex-none);
+            }
+            :host div[resource] > *:not(.resource-actions), :host div[info] > *:not(.info-actions) , :host *[content-top] > * {
+                padding: 10px;
+                box-sizing: border-box;
             }
             :host .resource-actions, :host .info-actions {
                 position: absolute;
@@ -55,6 +62,14 @@
                 text-overflow: ellipsis;
                 overflow: hidden;
             }
+            :host .content-top-actions .action {
+                @apply(--link-button);
+                padding: 4px;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 18px;
+                text-transform: uppercase;
+            }
             :host div[content] {
                 min-height: 100%;
             }
@@ -64,12 +79,6 @@
             }
             :host div[info] {
                 height: 100%;
-            }
-            :host .info-header {
-                border-bottom: 1px solid var(--divider-color);
-                height: 50px;
-                color: var(--primary-text-color);
-                @apply(--layout-flex-none);
             }
             :host .info-header .info-icon {
                 width: 32px;
@@ -97,6 +106,9 @@
             }
             :host .flex {
                 @apply(--layout-flex);
+            }
+            :host .flex-end {
+                @apply(--layout-end-justified);
             }
             :host([tablet-screen]) {
                 --resource-width: 250px;
