--- a/src/components/components/appsco-image-upload.html
+++ b/src/components/components/appsco-image-upload.html
@@ -4,80 +4,26 @@
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 
 <link rel="import" href="appsco-loader.html">
+<link rel="import" href="appsco-upload-image-behavior.html">
+<link rel="import" href="appsco-upload-image-styles.html">
 
 <dom-module id="appsco-image-upload">
     <template>
-        <style>
-            :host {
-                display: inline-block;
-                position: relative;
-                @apply(--appsco-image-upload);
-            }
-            .upload-container {
-                width: 96px;
-                height: 96px;
-                margin-left: auto;
-                margin-right: auto;
-                overflow: hidden;
-                position: relative;
-                @apply(--image-upload-container);
-            }
-            .image, .image-upload, .icon-upload {
-                position: absolute;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                margin: auto;
-            }
-            .image {
-                width: 96px;
-                height: 96px;
-                --iron-image-placeholder: {
-                    background: #eeeeee;
-                };
-
-                @apply(--image);
-            }
-            .image-upload {
-                background-color: rgba(250, 250, 250, 0.8);
-                display: block;
-                opacity: 0;
-                z-index: 5;
-                cursor: pointer;
-                @apply(--image-upload-field);
-            }
-            .image-upload.no-image {
-                opacity: 1;
-            }
-            .image-upload:hover {
-                opacity: 1;
-                transition: opacity .2s ease-in;
-            }
-            .icon-upload {
-                width: 32px;
-                height: 32px;
-                @apply(--image-upload-icon);
-            }
-            .upload-file {
-                width: 0;
-                height: 0;
-                opacity: 0;
-            }
+        <style include="appsco-upload-image-styles">
         </style>
 
         <div class="upload-container">
 
             <appsco-loader active="[[ _loader ]]" loader-alt="[[ loaderAlt]]" multi-color></appsco-loader>
 
-            <iron-image class="image"
+            <iron-image class="item-image"
                         src="[[ image ]]"
                         alt="[[ imageAlt ]]"
                         sizing="contain"></iron-image>
 
             <template is="dom-if" if="[[ !previewOnly ]]">
                 <label for="imageInput"
-                       class$="image-upload [[ _imagePreview ]]">
+                       class$="item-image-upload [[ _imagePreview ]]">
                     <iron-icon icon="file-upload" class="icon-upload"></iron-icon>
                 </label>
 
@@ -90,6 +36,13 @@
             </template>
         </div>
 
+        <template is="dom-if" if="[[ !previewOnly ]]">
+            <template is="dom-if" if="[[ image ]]">
+                <paper-button class="remove-action"
+                              on-tap="_onRemoveImageAction">[[ removeActionText ]]</paper-button>
+            </template>
+        </template>
+
     </template>
     <script>
         Polymer({
@@ -99,158 +52,58 @@
             properties: {
                 image: {
                     type: String,
-                    value: "",
+                    value: '',
                     notify: true
                 },
 
                 loaderAlt: {
                     type: String,
-                    value: "AppsCo is saving image"
+                    value: 'AppsCo is saving image'
                 },
 
                 imageAlt: {
                     type: String,
-                    value: "AppsCo image"
-                },
-
-                /**
-                 * Authorization token for the account.
-                 */
-                authorizationToken: {
-                    type: String,
-                    value: ''
-                },
-
-                /**
-                 * Account image settings api link.
-                 */
-                imageSettingsApi: {
-                    type: String
-                },
-
-                /**
-                 * Preview only. Without upload.
-                 */
-                previewOnly: {
-                    type: Boolean,
-                    value: false
-                },
-
-                /**
-                 * Computed headers.
-                 * It contains authorization token.
-                 */
-                _computedHeaders: {
-                    type: Object,
-                    computed: "_computeHeaders(authorizationToken)"
+                    value: 'AppsCo image'
                 },
 
                 _imagePreview: {
                     type: String,
                     computed: '_computeImagePreviewClass(image)'
-                },
-
-                _loader: {
-                    type: Boolean,
-                    value: false
-                }
-
-            },
-
-            _validateImageFile: function(file) {
-                var validFileTypes = ['image/jpg', 'image/jpeg', 'image/png'],
-                    fileType = file.type,
-                    valid = true;
-
-                if (file.size > 1048576) {
-                    this.fire('image-upload-error', 'Image size must be less than 1MB.');
-                    valid = false;
-                }
-                else {
-
-                    for (var i = 0; i < validFileTypes.length; i++) {
-
-                        if (validFileTypes[i] === fileType) {
-                            valid = true;
-                            break;
-                        }
-                        else {
-                            valid = false;
-                        }
-
-                        if (i === (validFileTypes.length - 1) && !valid) {
-                            this.fire('image-upload-error', 'Allowed file types are: jpg, jpeg and png.');
-                        }
-                    }
-
-                }
-
-                return valid;
-
-            },
-
-            _setNewImage: function(file) {
-                var reader = new FileReader();
-
-                reader.onload = function(e) {
-                    this.image = e.target.result;
-                }.bind(this);
-
-                reader.readAsDataURL(file);
-            },
-
-            _onUploadImage: function(event) {
-                var input = event.target;
-
-                if (input.files && input.files[0]) {
-                    var file = input.files[0],
-                        formData = new FormData(),
-                        request = new XMLHttpRequest();
-
-                    /** To ensure that on-change event will be triggered even if user tries to upload same image again */
-                    this.$$('#imageInput').value = null;
-                    if (!this._validateImageFile(file)) {
-                        return false;
-                    }
-
-                    formData.append('file', file, file.name);
-
-                    request.onreadystatechange = function()
-                    {
-                        if (4 === parseInt(request.readyState) && 200 === parseInt(request.status)) {
-                            this._setNewImage(file);
-                            this.fire('image-changed', {
-                                response: JSON.parse(request.response)
-                            })
-                        }
-                    }.bind(this);
-
-                    request.open('POST', this.imageSettingsApi, true);
-                    request.setRequestHeader('Authorization', this._computedHeaders);
-                    request.send(formData);
                 }
             },
 
-            /**
-             * Computes authorization headers.
-             *
-             * @param {Object} authorizationToken
-             * @returns {{Authorization: string}}
-             * @private
-             */
-            _computeHeaders: function (authorizationToken) {
-                return 'token ' + authorizationToken;
+            behaviors: [
+                Polymer.AppscoUploadImageBehavior
+            ],
+
+            reset: function() {
+                this.set('image', '');
             },
 
             _computeImagePreviewClass: function(image) {
                 return image ? 'has-image' : 'no-image';
             },
 
-            /**
-             * Resets component.
-             */
-            reset: function() {
-                this.image = "";
+            _setNewImage: function(file) {
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    this.set('image', e.target.result);
+                }.bind(this);
+
+                reader.readAsDataURL(file);
+            },
+
+            _fireChangeEvent: function(response) {
+                this.fire('image-changed', {
+                    response: JSON.parse(response)
+                });
+            },
+
+            _setStateAfterImageIsRemoved: function(response) {
+                this.set('image', '');
+                this._fireChangeEvent(JSON.stringify(response));
+                this._hideLoader();
             }
         });
     </script>
