DASH-3606 [Frontend][Resources] Change title of toggle button on page settings dialog

--- a/src/components/page/appsco-page-config-dropdown.html
+++ b/src/components/page/appsco-page-config-dropdown.html
@@ -105,7 +105,7 @@
                         <div class="input-container input-container-show-resource-section">
                             <paper-toggle-button id="hideResourceSectionToggle"
                                                  on-tap="saveChanges"
-                                                 checked$="[[ _hideResourceSection ]]">Hide resource section
+                                                 checked$="[[ _hideResourceSection ]]">Hide groups section
                             </paper-toggle-button>
                             <p class="info">
                                 Resource section will not be displayed by default when this option is turned on.
