--- a/src/components/header/appsco-header-account-actions.html
+++ b/src/components/header/appsco-header-account-actions.html
@@ -84,11 +84,13 @@ Custom property | Description | Default
                 </paper-icon-button>
             </template>
 
-            <paper-icon-button
-                    icon="icons:help"
-                    on-tap="_onGetStartedIcon"
-                    class="appsco-get-started-icon"
-            ></paper-icon-button>
+            <template is="dom-if" if="[[ tutorialActionAvailable ]]">
+                <paper-icon-button
+                        icon="icons:help"
+                        on-tap="_onGetStartedIcon"
+                        class="appsco-get-started-icon"
+                ></paper-icon-button>
+            </template>
 
             <appsco-notification-icon
                 id="newNotificationsIcon"
@@ -122,6 +124,11 @@ Custom property | Description | Default
 
                 /** Indicates if chat exists or not. */
                 chat: {
+                    type: Boolean,
+                    value: false
+                },
+
+                tutorialActionAvailable: {
                     type: Boolean,
                     value: false
                 },
