DASH-3646 [Provisioning] Advanced - matching email

--- a/src/components/integration/appsco-integration-rules-operators.html
+++ b/src/components/integration/appsco-integration-rules-operators.html
@@ -20,7 +20,9 @@
                     "notContains": "Does not contain",
                     "memberOf": "Is member of",
                     "notMemberOf": "Is not member of",
-                    "matching": "Matching"
+                    "matching": "Matching",
+                    "startsWith": "Starts with",
+                    "endsWith": "Ends with"
                 }
             }
 
