DASH-3656 [Front end][Manage Customer] Cards placing when there are only two cards

--- a/src/components/application/company/appsco-application-assignees.html
+++ b/src/components/application/company/appsco-application-assignees.html
@@ -38,6 +38,7 @@ Contains info about application assignees (accounts to whom app is shared).
             }
             :host paper-progress {
                 width: 100%;
+                @apply(--appsco-list-progress-bar);
             }
             :host .info-total {
                 margin-bottom: 10px;
