--- a/src/components/application/company/appsco-resource-admins.html
+++ b/src/components/application/company/appsco-resource-admins.html
@@ -22,6 +22,7 @@
             }
             :host paper-progress {
                 width: 100%;
+                @apply(--appsco-list-progress-bar);
             }
             :host .info-total {
                 margin-bottom: 10px;
