--- a/src/components/integration/appsco-integration-webhooks-card.html
+++ b/src/components/integration/appsco-integration-webhooks-card.html
@@ -22,6 +22,7 @@
                 position: absolute;
                 top: 0;
                 left: 0;
+                @apply(--appsco-list-progress-bar);
             }
             .info {
                 @apply(--info-message);
