--- a/src/components/contact/appsco-manage-contact-components-page.html
+++ b/src/components/contact/appsco-manage-contact-components-page.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/hero-animation.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/cascaded-animation.html">
@@ -15,64 +14,19 @@
 <link rel="import" href="appsco-contact-applications.html">
 <link rel="import" href="appsco-contact-groups.html">
 <link rel="import" href="../account/appsco-account-log.html">
+<link rel="import" href="../page/appsco-layout-with-cards-styles.html">
 
 <dom-module id="appsco-manage-contact-components-page">
     <template>
-        <style>
+        <style include="appsco-layout-with-cards-styles">
             :host {
-                display: block;
-                overflow-y: auto;
-                @apply(--layout-horizontal);
-                @apply(--layout-wrap);
-                @apply(--layout-justified);
-                @apply(--appsco-components-page);
-
-                --paper-button: {
-                     padding: 6px 0;
-                     margin: 0;
-                     border-radius: 0;
-                     width: 100%;
-                     color: var(--primary-text-color);
-                 };
-
                 --iron-icon-height: 20px;
                 --iron-icon-width: 20px;
                 --iron-icon: {
                      margin-top: -3px;
                  };
             }
-            :host > * {
-                width: calc(100% / 3 - 10px);
-                margin-bottom: 10px;
-                @apply(--layout-self-start);
-            }
-            paper-card {
-                width: 100%;
-                 min-height: 150px;
-                 box-sizing: border-box;
-
-                --paper-card-content: {
-                     min-height: 70px;
-                     box-sizing: border-box;
-                 };
-                --paper-card-actions: {
-                     padding: 0;
-                     border-color: var(--divider-color);
-                 };
-                --paper-card-header-text: {
-                     padding: 8px 16px;
-                     font-size: 18px;
-                     color: var(--primary-text-color);
-                     border-bottom: 1px solid var(--divider-color);
-                 };
-            }
             appsco-account-log {
-                --appsco-account-log-container: {
-                     padding-top: 4px;
-                 };
-                --account-log-paper-progress: {
-                     top: 4px;
-                 };
                 --appsco-account-log-item: {
                      padding: 16px 6px 8px 6px;
                  };
@@ -83,85 +37,67 @@
                      top: 2px;
                  };
             }
-            :host .shared-applications. :host .activity-log, :host.groups {
-                @apply(--layout-vertical);
-            }
-            :host .shared-applications {
-                margin-right: 10px;
-            }
-            :host .groups {
-                margin-top: 10px;
-            }
-            :host([medium-screen]) > * {
-                width: calc(100% / 2 - 10px);
-            }
-            :host([tablet-screen]) > * {
-                width: 100%;
-            }
-            :host([tablet-screen]) .shared-applications {
-                margin-right: 0;
-            }
-
         </style>
 
         <iron-media-query query="(max-width: 1200px)" query-matches="{{ mediumScreen }}"></iron-media-query>
         <iron-media-query query="(max-width: 800px)" query-matches="{{ tabletScreen }}"></iron-media-query>
 
-        <div class="shared-applications">
-            <paper-card heading="Shared resources">
-                <div class="card-content">
-                    <appsco-contact-applications
-                            id="contactApplications"
-                            contact="[[ contact ]]"
-                            authorization-token="[[ authorizationToken ]]"
-                            size="5"
-                            preview
-                    ></appsco-contact-applications>
-                </div>
-
-                <div class="card-actions">
-                    <paper-button on-tap="_onAllApplications">ALL</paper-button>
-                </div>
-            </paper-card>
-
-            <div class="groups">
-                <paper-card heading="Groups" class="appsco-contact-groups">
+        <div class="cols-layout two-cols-layout">
+            <div class="col">
+                <paper-card heading="Shared resources">
                     <div class="card-content">
-                        <appsco-contact-groups
-                                id="appscoContactGroup"
-                                authorization-token="[[ authorizationToken ]]"
-                                groups-api="[[ groupsApi ]]"
+                        <appsco-contact-applications
+                                id="contactApplications"
                                 contact="[[ contact ]]"
+                                authorization-token="[[ authorizationToken ]]"
                                 size="5"
-                                preview></appsco-contact-groups>
+                                preview
+                        ></appsco-contact-applications>
                     </div>
 
                     <div class="card-actions">
-                        <paper-button on-tap="_onManageGroups">Manage</paper-button>
+                        <paper-button on-tap="_onAllApplications">ALL</paper-button>
+                    </div>
+                </paper-card>
+
+                <div class="groups">
+                    <paper-card heading="Groups" class="appsco-contact-groups">
+                        <div class="card-content">
+                            <appsco-contact-groups
+                                    id="appscoContactGroup"
+                                    authorization-token="[[ authorizationToken ]]"
+                                    groups-api="[[ groupsApi ]]"
+                                    contact="[[ contact ]]"
+                                    size="5"
+                                    preview></appsco-contact-groups>
+                        </div>
+
+                        <div class="card-actions">
+                            <paper-button on-tap="_onManageGroups">Manage</paper-button>
+                        </div>
+                    </paper-card>
+                </div>
+            </div>
+
+            <div class="col">
+                <paper-card heading="Activity log">
+                    <div class="card-content">
+
+                        <appsco-account-log
+                                id="appscoAccountLog"
+                                account="[[ contact.account ]]"
+                                authorization-token="[[ authorizationToken ]]"
+                                log-api="[[ logApi ]]"
+                                size="5"
+                                short-view>
+                        </appsco-account-log>
+                    </div>
+
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageActivityLog">ALL</paper-button>
                     </div>
                 </paper-card>
             </div>
-
-        </div>
-
-        <div class="activity-log">
-            <paper-card heading="Activity log">
-                <div class="card-content">
-
-                    <appsco-account-log
-                            id="appscoAccountLog"
-                            account="[[ contact.account ]]"
-                            authorization-token="[[ authorizationToken ]]"
-                            log-api="[[ logApi ]]"
-                            size="5"
-                            short-view>
-                    </appsco-account-log>
-                </div>
-
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageActivityLog">ALL</paper-button>
-                </div>
-            </paper-card>
         </div>
     </template>
 
