--- a/src/components/customer/appsco-manage-customer-components-page.html
+++ b/src/components/customer/appsco-manage-customer-components-page.html
@@ -1,5 +1,4 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/hero-animation.html">
 <link rel="import" href="../../../bower_components/neon-animation/animations/cascaded-animation.html">
@@ -10,83 +9,11 @@
 <link rel="import" href="../../../bower_components/iron-media-query/iron-media-query.html">
 
 <link rel="import" href="appsco-customer-partner-admins.html">
+<link rel="import" href="../page/appsco-layout-with-cards-styles.html">
 
 <dom-module id="appsco-manage-customer-components-page">
     <template>
-        <style>
-            :host {
-                display: block;
-                overflow-y: auto;
-                @apply(--layout-horizontal);
-                @apply(--layout-wrap);
-                @apply(--layout-justified);
-                @apply(--appsco-components-page);
-
-                --paper-button: {
-                     padding: 6px 0;
-                     margin: 0;
-                     border-radius: 0;
-                     width: 100%;
-                     color: var(--primary-text-color);
-                 };
-
-                --customer-resources-progress-bar: {
-                    top: -6px;
-                };
-
-                --customer-roles-progress-bar: {
-                    top: -6px;
-                };
-
-                --customer-contacts-progress-bar: {
-                    top: -6px;
-                };
-            }
-            :host > * {
-                width: calc(100% / 3 - 7px);
-                margin-bottom: 10px;
-                float: left;
-            }
-            paper-card {
-                 min-height: 170px;
-                 box-sizing: border-box;
-
-                --paper-card-content: {
-                     min-height: 90px;
-                     box-sizing: border-box;
-                 };
-                --paper-card-actions: {
-                     padding: 0;
-                     border-color: var(--divider-color);
-                 };
-                --paper-card-header-text: {
-                     padding: 8px 16px;
-                     font-size: 18px;
-                     color: var(--primary-text-color);
-                     border-bottom: 1px solid var(--divider-color);
-                 };
-            }
-            .card {
-                @apply(--layout-vertical);
-            }
-            .resources-partner-admins-container .card {
-                margin-right: 10px;
-                margin-bottom: 10px;
-            }
-            .partner-admins-container, .partner-admins-container {
-                margin-right: 10px;
-                margin-bottom: 10px;
-            }
-            :host([medium-screen]) {
-                @apply(--layout-flex-none);
-            }
-            :host([medium-screen]) > * {
-                width: calc(100% / 2 - 5px);
-            }
-            :host([tablet-screen]) > * {
-                width: 100%;
-                margin-right: 0;
-            }
+        <style include="appsco-layout-with-cards-styles">
             :host .subscription-paid-partner {
                 padding-bottom: 5px;
             }
@@ -101,51 +28,53 @@
         <iron-media-query query="(max-width: 1200px)" query-matches="{{ mediumScreen }}"></iron-media-query>
         <iron-media-query query="(max-width: 800px)" query-matches="{{ tabletScreen }}"></iron-media-query>
 
-        <div class="partner-admins-container">
-            <paper-card heading="Partner admins" class="card">
-                <div class="card-content">
-                    <appsco-customer-partner-admins
-                            id="appscoCustomerPartnerAdmins"
-                            customer="[[ customer ]]"
-                            list-api="[[ customerPartnerAdminsApi ]]"
-                            authorization-token="[[ authorizationToken ]]"
-                            size="5"
-                            auto-load-active
-                            preview></appsco-customer-partner-admins>
-                </div>
-
-                <div class="card-actions">
-                    <paper-button on-tap="_onManageCustomerRoles">Manage</paper-button>
-                </div>
-            </paper-card>
-        </div>
-
-        <div>
-            <paper-card heading="Customer subscription" class="card">
-                <div class="card-content">
-                    <template is="dom-if" if="[[ _isSubscriptionPaidExternally ]]">
-                        <div class="subscription-paid-partner">
-                            Subscription is paid for the customer by partner.
-                        </div>
-                        <div class=subscription-paid-partner">
-                            Number of licenses: [[ customer.max_subscription_size ]]
-                        </div>
-                    </template>
-                    <template is="dom-if" if="[[ !_isSubscriptionPaidExternally ]]">
-                        <div class="subscription-paid-customer">
-                            Subscription is paid by customer.
-                        </div>
-                    </template>
-                    <template is="dom-if" if="[[ _isSubscriptionPaidExternally ]]">
-                        <div class="customer-used-licences">
-                            Customer has [[ customer.used_licences ]] licences currently.
-                        </div>
-                    </template>
-                </div>
-                <div class="card-actions">
-                        <paper-button on-tap="_onManageCustomerSubscription">Manage</paper-button>
+        <div class="cols-layout two-cols-layout">
+            <div class="col">
+                <paper-card heading="Partner admins" class="card">
+                    <div class="card-content">
+                        <appsco-customer-partner-admins
+                                id="appscoCustomerPartnerAdmins"
+                                customer="[[ customer ]]"
+                                list-api="[[ customerPartnerAdminsApi ]]"
+                                authorization-token="[[ authorizationToken ]]"
+                                size="5"
+                                auto-load-active
+                                preview></appsco-customer-partner-admins>
                     </div>
-            </paper-card>
+
+                    <div class="card-actions">
+                        <paper-button on-tap="_onManageCustomerRoles">Manage</paper-button>
+                    </div>
+                </paper-card>
+            </div>
+
+            <div class="col">
+                <paper-card heading="Customer subscription" class="card">
+                    <div class="card-content">
+                        <template is="dom-if" if="[[ _isSubscriptionPaidExternally ]]">
+                            <div class="subscription-paid-partner">
+                                Subscription is paid for the customer by partner.
+                            </div>
+                            <div class=subscription-paid-partner">
+                                Number of licenses: [[ customer.max_subscription_size ]]
+                            </div>
+                        </template>
+                        <template is="dom-if" if="[[ !_isSubscriptionPaidExternally ]]">
+                            <div class="subscription-paid-customer">
+                                Subscription is paid by customer.
+                            </div>
+                        </template>
+                        <template is="dom-if" if="[[ _isSubscriptionPaidExternally ]]">
+                            <div class="customer-used-licences">
+                                Customer has [[ customer.used_licences ]] licences currently.
+                            </div>
+                        </template>
+                    </div>
+                    <div class="card-actions">
+                            <paper-button on-tap="_onManageCustomerSubscription">Manage</paper-button>
+                        </div>
+                </paper-card>
+            </div>
         </div>
 
     </template>
