DASH-3667 [Backend] OAuth application authorized should show the title of the application in response

--- a/src/components/account/appsco-account-log.html
+++ b/src/components/account/appsco-account-log.html
@@ -509,7 +509,11 @@ Custom property | Description | Default
                 return {
                     icon: 'icons:apps',
                     date: item.created_at.date,
-                    message: this.localize('account_log_application_authorized', 'application', item.data.application.title),
+                    message: this.localize(
+                        'account_log_application_authorized',
+                        'application',
+                        item.data.oauth_authorization.oauth_application.title
+                    ),
                     address: item.ip
                 }
             },
